[gd_scene load_steps=10 format=3 uid="uid://b1ogo8a5bckpl"]

[ext_resource type="Script" uid="uid://iyni07i4mwid" path="res://Scripts/Enemy.gd" id="1_w3icy"]
[ext_resource type="PackedScene" uid="uid://qim86jss2s4y" path="res://Prefabs/Cannon.tscn" id="2_2l16u"]
[ext_resource type="Script" uid="uid://wfet8n3t44uv" path="res://HealthComponent.gd" id="2_dvw5c"]
[ext_resource type="Texture2D" uid="uid://ctkpj41hysdiy" path="res://Art/Enemy/Toasty.png" id="2_w3icy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmyd0"]
size = Vector2(308, 186)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3icy"]
size = Vector2(311, 184)

[sub_resource type="Animation" id="Animation_bmyd0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w3icy"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17342"]
_data = {
&"RESET": SubResource("Animation_bmyd0"),
&"hit": SubResource("Animation_w3icy")
}

[node name="Toasty" type="CharacterBody2D"]
script = ExtResource("1_w3icy")
Name = "Toasty"

[node name="Cannon" parent="." instance=ExtResource("2_2l16u")]
position = Vector2(10, 13)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_w3icy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_bmyd0")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_dvw5c")
MaxHealth = 30

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-10.5, 4)
rotation = 1.5708
shape = SubResource("RectangleShape2D_w3icy")

[node name="HitAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_17342")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.1
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 600.0
scale_amount_min = 4.0
scale_amount_max = 4.0

[connection signal="OnDeath" from="HealthComponent" to="." method="_on_health_component_on_death"]
